# pdf-outline-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
lib/: lib.py  maths_textbook.py
lib/pikepdf/: __init__.py  types.pyi
